--- a/src/app/projects/pilot-prep/page.mdx
+++ b/src/app/projects/pilot-prep/page.mdx
@@ -95,22 +95,6 @@ Implemented multi-layer caching system combining CloudFront edge caching, Redis 
 - Subdomain configuration with custom SSL certificates
 - Configurable course catalogues and pricing structures
 
-## Technical Highlights
-
-### Advanced Video Processing
-Integrated with MUX for optimised video delivery and automatic transcoding across devices.
-
-### Database Optimisation
-Utilised PostgreSQL advanced features including:
-- Table partitioning for large datasets
-- Strategic indexing for complex queries
-- Common Table Expressions (CTEs) for efficient reporting
-
-### Deployment Pipeline
-Containerised with Docker and deployed via Railway with automated:
-- End-to-end testing using Playwright
-- Database migrations and rollback capabilities
-- Zero-downtime deployments with health checks
 
 ## Business Impact
 
@@ -126,9 +110,9 @@ Containerised with Docker and deployed via Railway with automated:
 
 ## Links
 
-- 🌐 **Live Platform:** [staging.pilotprep.co.nz](https://staging.pilotprep.co.nz)
+- 🌐 **Live Platform:** [pilotprep.co.nz](https://pilotprep.co.nz)
 - 📧 **Contact:** For demo access or partnership inquiries
 
 ---
 
-*This platform represents over 18 months of development focused on revolutionising aviation education through technology. Currently in active development with plans for public course availability in 2024.*
+*This platform represents over 18 months of development focused on revolutionising aviation education through technology. Currently in active development with plans for public course availability in 2026.*
