--- a/src/app/projects/grace-and-aroha/page.mdx
+++ b/src/app/projects/grace-and-aroha/page.mdx
@@ -45,19 +45,6 @@ Initially built as a beautifully crafted static website focusing on:
 - Fast loading times with optimised images and minimal dependencies
 - SEO-friendly semantic HTML structure
 
-```html
-<!-- Example of semantic structure for educational content -->
-<article class="resource-card">
-  <header>
-    <h2>Early Literacy Development</h2>
-    <time datetime="2020-10-15">October 15, 2020</time>
-  </header>
-  <section class="resource-content">
-    <p>Developing literacy skills starts much earlier than many parents realise...</p>
-  </section>
-</article>
-```
-
 ### Phase 2: Dynamic Content Management (2021)
 **Evolved Tech Stack:** Next.js, Strapi CMS, Heroku → Railway
 
@@ -65,20 +52,6 @@ When the need for regular blog content emerged, I transformed the static site in
 
 ## Technical Architecture
 
-### Next.js Static Site Generation
-Leveraged Next.js ISG (Incremental Static Generation) to maintain the performance benefits of static sites while enabling dynamic content:
-
-```javascript
-// Automated static generation with revalidation
-export async function getStaticProps() {
-  const posts = await fetchFromStrapi('/api/blog-posts?populate=*');
-  
-  return {
-    props: { posts },
-    revalidate: 60, // Revalidate every minute
-  };
-}
-```
 
 ### Strapi CMS Integration
 Implemented a headless CMS solution providing:
@@ -95,109 +68,12 @@ Created a seamless content publishing workflow:
 3. **Site Rebuild:** Next.js rebuilds affected pages with new content
 4. **CDN Invalidation:** Automatic cache clearing for instant updates
 
-```javascript
-// Webhook handler for automated rebuilds
-export default async function handler(req, res) {
-  if (req.method === 'POST') {
-    try {
-      await res.revalidate('/blog');
-      await res.revalidate('/');
-      return res.json({ revalidated: true });
-    } catch (err) {
-      return res.status(500).send('Error revalidating');
-    }
-  }
-}
-```
 
-## Key Features & Benefits
-
-### 🎨 Design Excellence
-- **Brand Consistency:** Warm, welcoming colour palette reflecting the educator's personality
-- **Typography:** Carefully selected fonts optimising readability for educational content
-- **Image Optimisation:** Next.js Image component with WebP conversion and lazy loading
-- **Accessibility:** WCAG 2.1 AA compliance ensuring content reaches all families
-
-### 📝 Content Management Revolution
-**Before:** Static content requiring developer updates
-**After:** Independent content publishing with immediate live updates
-
-**Educator Benefits:**
-- Published 25+ blog posts independently without technical assistance
-- Reduced content update time from days to minutes
-- Gained ability to respond quickly to current educational topics
-
-### 🔍 SEO Performance
-Maintained excellent search engine visibility through:
-- **Structured Data:** Schema.org markup for educational content
-- **Meta Optimisation:** Dynamic meta tags based on content
-- **Sitemap Generation:** Automatic XML sitemap updates
-- **Core Web Vitals:** 95+ scores across all performance metrics
-
-### 📱 Mobile-First Experience
-- **Progressive Web App:** Installable on mobile devices
-- **Offline Reading:** Service worker for cached content access
-- **Touch-Optimised:** Intuitive navigation for mobile users
-
-## Technical Challenges & Solutions
-
-### Challenge: SEO During Migration
-**Problem:** Risk of losing search rankings during static-to-dynamic migration
-**Solution:** 
-- Implemented 301 redirects for all existing URLs
-- Maintained identical URL structure
-- Used Next.js Static Export for initial deployment ensuring no content changes
-
-### Challenge: Cost-Effective Hosting
-**Problem:** Initial Heroku deployment becoming expensive for a non-profit project
-**Solution:**
-- Migrated to Railway for more affordable hosting
-- Optimised database queries to reduce resource usage
-- Implemented intelligent caching strategies
-
-### Challenge: Content Creator Usability
-**Problem:** Ensuring non-technical user could manage content independently
-**Solution:**
-- Customised Strapi admin interface for simplified workflow
-- Created detailed documentation with screenshots
-- Implemented content preview functionality
-
-## Infrastructure & Deployment
-
-### Hosting Evolution
-1. **Static Era:** GitHub Pages for simple HTML deployment
-2. **Dynamic Era:** Heroku with PostgreSQL database
-3. **Current:** Railway with optimised PostgreSQL and Redis caching
-
-### Performance Optimisation
-- **Image Processing:** Automatic WebP conversion and responsive images
-- **Code Splitting:** Route-based splitting reducing initial bundle size
-- **CDN Integration:** CloudFront for global content delivery
-- **Database Caching:** Redis for frequently accessed content
-
-## Impact & Results
-
-### Audience Growth
-- **300% increase** in monthly website visitors
-- **Blog engagement** averaging 2.5 minutes per post
-- **Social sharing** increased by 150% with integrated sharing buttons
-
-### Professional Development
-- Enhanced credibility within early childhood education community
-- Featured speaker opportunities at educational conferences
-- Collaboration requests from other educators
-
-### Technical Learning
-This project served as a practical laboratory for learning:
-- Next.js framework fundamentals and advanced features
-- Headless CMS architecture and implementation
-- Webhook integration and automated deployment
-- SEO optimisation for content-heavy sites
 
 ## Links
 
 - 🌐 **Live Website:** [graceandaroha.co.nz](https://graceandaroha.co.nz)
-- 📚 **Blog Section:** Featuring 25+ educational articles
+- 📚 **Blog Section:** Featuring 6+ rotated articles
 - 📧 **Contact:** Educational consultation and collaboration opportunities
 
 ---
